# Tesi

./: .~lock.presentazioneFinale.pptx#  TEM.pptx
Code/: a.out  temporalGraph.cpp
Code/TemporalStructures/: CMakeLists.txt
Code/TemporalStructures/lib/: temporalStructures.cpp  temporalStructures.h
Code/TemporalStructures/src/: main.cpp  windowAlg.cpp
Tesi/: presentazione.pptx
